--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -1,7 +1,7 @@
 /* +++ Media Query for max width of 360px +++ */
 @media (max-width: #{$small}) {
   .app {
-    /* ++++++++++ Start Navbar Component media query ++++++++++ */
+    /* Navbar Component */
     .navbar-container {
       .hamburger {
         display: block;
@@ -41,6 +41,7 @@
       }
     }
 
+    /* Hero Component */
     .hero-container {
       width: 99%;
       display: flex;
@@ -186,6 +187,33 @@
       }
     }
 
+    .about-container {
+      width: 99%;
+      flex-wrap: wrap;
+      .rectangle1,
+      .rectangle2 {
+        display: none;
+      }
+
+      .about-image {
+        margin: 0;
+        width: 300px;
+        height: 400px;
+        // border: 6px solid #b68a2352;
+      }
+      section {
+        margin: 0;
+        gap: 0;
+        max-width: 100vw;
+        text-align: center;
+
+        p {
+          font-size: 1rem;
+          width: 100vw;
+          margin-bottom: 1rem;
+        }
+      }
+    }
     /* Contact component */
     .contact-container {
       margin: 2rem auto;
