--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -187,6 +187,7 @@
       }
     }
 
+    /* About Componet */
     .about-container {
       width: 99%;
       flex-wrap: wrap;
@@ -337,151 +338,129 @@
 /* +++Media Query between 361px and 600px  +++*/
 @media (min-width: 361px) and (max-width: #{$medium}) {
   .app {
-    /*----- Start of Aboutme component media query----- */
+    /* Navbar Component */
+    .navbar-container {
+      .hamburger {
+        display: block;
+        padding: 0 1rem;
+        cursor: pointer;
+        position: absolute;
+        top: 2px;
+        right: 10px;
+        color: #b48821;
+      }
+      .navbar {
+        .nav-menu {
+          display: none;
+          gap: 0;
+        }
+        .logo {
+          position: absolute;
+          h1 {
+            font-size: 3rem;
+          }
+          top: 21px;
+        }
+      }
+      .expanded {
+        background-color: $secondary-background-color; /* Use the defined variablebout-container {
+          flex-direction: column;
+          img { here */
+        min-height: 55vh;
+        .nav-menu {
+          position: absolute;
+          top: 120px;
+          left: 0;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+        }
+      }
+    }
+
+    /* Hero Component */
+    .hero-container {
+      width: 99%;
+      display: flex;
+      justify-content: center;
+
+      .hero {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        flex-direction: column;
+        background: none;
+        .col1 {
+          width: 100%;
+
+          margin-left: 0;
+          margin-top: 0;
+          margin-bottom: 0;
+          order: 1;
+          h1 {
+            text-align: center;
+            font-size: 8rem;
+          }
+          h2 {
+            text-align: center;
+
+            font-size: 3rem;
+          }
+        }
+        .col2 {
+          position: relative;
+          width: 100%;
+          order: 2;
+          margin-left: 0;
+          .ball {
+            width: 18rem;
+            height: 18rem;
+            margin-left: 0;
+            right: 10rem;
+            transform: translateX(-5px);
+          }
+          img {
+            width: 14rem;
+            height: 15rem;
+            margin-top: 1rem;
+          }
+        }
+      }
+    }
+
+    /* About Componet */
     .about-container {
+      width: 99%;
       flex-wrap: wrap;
       .rectangle1,
       .rectangle2 {
-        width: 250px;
-        height: 430px;
-        left: 3rem;
+        display: none;
       }
-      .rectangle1 {
-        border: 5px solid #b68a2352;
-        margin-left: 30px; //Add some spacing between the rectangles
-      }
-      .rectangle2 {
-        border: 5px solid #eaeae8;
-        margin-top: -15px;
-        margin-left: -5px; /* Add some spacing between the rectangles */
-      }
+
       .about-image {
+        margin: 0;
         width: 300px;
         height: 400px;
         // border: 6px solid #b68a2352;
       }
       section {
+        margin: 0;
         gap: 0;
         max-width: 100vw;
         text-align: center;
 
-        h2 {
-          font-size: 1.5rem;
-          margin-bottom: 0;
-          margin-top: 2rem;
-          padding: 1rem;
-        }
         p {
           font-size: 1rem;
           width: 100vw;
           margin-bottom: 1rem;
         }
       }
-      /*----- End of Aboutme component media query----- */
-
-      /*----- Start of Service component media query----- */
     }
 
-    .service-container {
-      margin-top: 2rem;
-      width: 99%;
-
-      .header-container {
-        h3 {
-          font-size: 1.8rem;
-          margin-bottom: 2rem;
-        }
-      }
-
-      .tab-container {
-        /*  border: 1px solid green; */
-        width: 100%;
-        padding: 2.5rem;
-
-        .navigation {
-          padding-left: 0;
-          gap: 8.5rem;
-          margin-bottom: 1rem;
-          justify-content: center;
-          li {
-            margin: 0 auto;
-
-            padding: 0;
-
-            .button {
-              .icon {
-                width: 5.5rem;
-                height: 5.5rem;
-
-                img {
-                  height: 3rem;
-                  width: 3rem;
-                }
-              }
-            }
-          }
-        }
-      }
-
-      .service-section {
-        padding: 1rem;
-
-        .card-container {
-          box-shadow: 0.5rem 0.5rem 1rem rgba(51, 51, 51, 0.2);
-          border-radius: 1rem;
-          overflow: hidden;
-          transition: all 0.1ms ease-in-out;
-          margin: 0;
-          width: 85%;
-          background: none;
-
-          &:hover {
-            transform: scale(1.02);
-          }
-
-          .img-fluid {
-            display: none;
-          }
-
-          .card-body {
-            position: relative;
-
-            .card-title {
-              position: absolute;
-              top: 0;
-              left: 0;
-              right: 0;
-              clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);
-              background-color: #b48821;
-              width: 100%;
-              text-align: center;
-              font-size: 1.5rem;
-              padding: 1rem;
-              color: white;
-            }
-
-            .card-text {
-              margin-top: 2.5rem;
-              font-size: 1.2rem;
-            }
-
-            .subscribe-btn-container {
-              display: flex;
-              justify-content: center;
-              .subscribe-btn {
-                height: 2.5rem;
-                font-size: 1.2rem;
-                font-weight: 400;
-              }
-            }
-          }
-        }
-      }
-    }
-    /*----- End of Service component media query----- */
-
-    /* Start of the contact component media query */
+    /* Contact component */
     .contact-container {
+      margin-top: -5rem;
       width: 99%;
 
       .contact-sub-container {
@@ -489,18 +468,116 @@
           width: 100%;
 
           h2 {
-            font-size: 2rem;
+            display: none;
           }
           h3 {
-            font-size: 1.5rem;
+            margin-top: 0;
+            font-size: 2rem;
+            color: #b48821;
+            text-align: center;
+          }
+
+          /* form name */
+          .col-6 {
+            width: 100%;
+            margin-bottom: 1rem;
+          }
+
+          /* form subject */
+          .col {
+            margin-top: -3rem;
+          }
+
+          /* form message */
+          .message {
+            height: 8rem;
+          }
+
+          /* contact button */
+          .submit-btn {
+            font-size: 1rem;
+            height: 2.5rem;
+            font-weight: 500;
           }
         }
+
         .contact-img {
           display: none;
         }
       }
     }
-    /* End of the contact component media query */
+
+    /* Footer component */
+    footer {
+      .scroll-to-top {
+        width: 35px;
+        height: 35px;
+        font-size: 18px;
+        bottom: 20px;
+        right: 20px;
+      }
+      .footer-container {
+        display: flex;
+        flex-direction: column;
+
+        .logo-container {
+          padding-top: 1.5rem;
+          display: flex;
+          justify-content: center;
+          .logo {
+            font-size: 2.5rem;
+          }
+        }
+
+        /* About container */
+        .about-me {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          h5 {
+            margin-top: -1.5rem;
+            text-align: center;
+            padding-bottom: 1rem;
+            font-size: 1.5rem;
+          }
+          p {
+            font-size: 0.9rem;
+            padding-left: 2.5rem;
+            padding-right: 2.5rem;
+          }
+          .icons {
+            ul {
+              font-size: 2rem;
+              gap: 1rem;
+              justify-content: center;
+              padding-left: 0;
+            }
+          }
+        }
+
+        /* .links */
+        .links {
+          display: flex;
+          justify-content: center;
+
+          ul {
+            h5 {
+              text-align: center;
+              font-size: 1.5rem;
+            }
+            li {
+              a {
+                font-size: 1rem;
+              }
+            }
+          }
+        }
+      }
+
+      .copyright {
+        font-size: 1rem;
+      }
+    }
   }
 }
 
