--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -584,6 +584,47 @@
 /* +++Media Query between 601px and 800px  +++*/
 @media (min-width: 601px) and (max-width: #{$large}) {
   .app {
+    /* Navbar Component */
+    .navbar-container {
+      .hamburger {
+        display: block;
+        padding: 0 1rem;
+        cursor: pointer;
+        position: absolute;
+        top: 2px;
+        right: 10px;
+        color: #b48821;
+      }
+      .navbar {
+        .nav-menu {
+          display: none;
+          gap: 0;
+        }
+        .logo {
+          position: absolute;
+          h1 {
+            font-size: 3rem;
+          }
+          top: 21px;
+        }
+      }
+      .expanded {
+        background-color: $secondary-background-color; /* Use the defined variablebout-container {
+          flex-direction: column;
+          img { here */
+        min-height: 55vh;
+        .nav-menu {
+          position: absolute;
+          top: 120px;
+          left: 0;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+        }
+      }
+    }
+
+    /* Hero component */
     .hero-container {
       display: flex;
       justify-content: center;
@@ -633,7 +674,8 @@
         }
       }
     }
-    /*----- Start of Service component media query----- */
+
+    /* Service Component */
     .service-container {
       margin-top: 2rem;
       width: 99%;
@@ -734,42 +776,37 @@
         }
       }
     }
-    /*----- End of Service component media query----- */
 
-    /*----- Start of Aboutme component media query----- */
+    /* About Componet */
     .about-container {
-      display: flex;
-      flex-direction: column;
-      .about-image {
-        width: 300px;
-        height: 450px;
-        margin-left: 0;
-      }
+      width: 99%;
+      flex-wrap: wrap;
       .rectangle1,
       .rectangle2 {
-        width: 350px;
-        height: 530px;
+        display: none;
       }
-      .rectangle1 {
-        border: 10px solid #b68a2352;
-      }
-      .rectangle2 {
-        border: 10px solid #eaeae8;
+
+      .about-image {
+        margin: 0;
+        width: 300px;
+        height: 400px;
+        // border: 6px solid #b68a2352;
       }
       section {
-        text-align: center;
-        max-width: 100vw;
+        margin: 0;
         gap: 0;
-        h2 {
-          margin-top: 2rem;
-          font-size: 2.5rem;
-        }
+        max-width: 100vw;
+        text-align: center;
+
         p {
-          max-width: 80vw;
+          font-size: 1rem;
+          width: 100vw;
+          margin-bottom: 1rem;
         }
       }
     }
 
+    /* Contact Component */
     .contact-container {
       width: 99%;
 
@@ -778,10 +815,10 @@
           width: 100%;
 
           h2 {
-            font-size: 1.5rem;
+            font-size: 2.5rem;
           }
           h3 {
-            font-size: 1.5rem;
+            font-size: 2rem;
           }
         }
         .contact-img {
@@ -789,15 +826,19 @@
         }
       }
     }
-    /*----- End of Contact component media query----- */
 
-    /*----- Start of Footer component media query----- */
+    /* Footer */
     footer {
       .footer-container {
         display: flex;
         flex-direction: column;
+        align-items: center;
 
-        margin-left: 2rem;
+        .logo-container {
+          .logo {
+            margin-top: 2rem;
+          }
+        }
 
         .links {
           li {
