--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -855,116 +855,142 @@
   }
 }
 
-/* +++Media Query between 801px and 1023px  +++*/
+/* +++Media Query between 801px and 1024px  +++*/
 @media (min-width: 801px) and (max-width: #{$xlarge}) {
   .app {
+    /* About Componet */
     .about-container {
-      about-image {
-        width: 400px;
+      width: 99%;
+      flex-wrap: wrap;
+
+      .rectangle1,
+      .rectangle2 {
+        left: 16rem;
+        width: 430px;
         height: 600px;
       }
-      /*----- Start of Service component media query----- */
-      .service-container {
-        margin-top: 2rem;
-        width: 99%;
 
-        .header-container {
-          h3 {
-            margin-bottom: 3rem;
-          }
+      .about-image {
+        margin: 0;
+        width: 400px;
+        height: 500px;
+        // border: 6px solid #b68a2352;
+      }
+      section {
+        margin-top: 10rem;
+        gap: 0;
+        max-width: 100vw;
+        text-align: center;
+
+        p {
+          font-size: 1rem;
+          width: 100vw;
+          margin-bottom: 1rem;
         }
+      }
+    }
+    /* Service Component */
+    .service-container {
+      margin-top: 2rem;
+      width: 99%;
 
-        .tab-container {
-          /*  border: 1px solid green; */
-          width: 100%;
-          padding: 3rem;
-
-          .navigation {
-            padding-left: 0;
-            gap: 16rem;
-            margin-bottom: 1rem;
-            justify-content: center;
-
-            li {
-              margin: 0 auto;
-              padding: 0;
-
-              .button {
-                .icon {
-                  width: 8rem;
-                  height: 8rem;
-
-                  img {
-                    height: 5.5rem;
-                    width: 5.5rem;
-                  }
-                }
-              }
-            }
-          }
+      .header-container {
+        h3 {
+          margin-bottom: 3rem;
         }
+      }
 
-        .service-section {
-          padding: 2rem;
+      .tab-container {
+        /*  border: 1px solid green; */
+        width: 100%;
+        padding: 3rem;
 
-          .card-container {
-            box-shadow: 0.5rem 0.5rem 1rem rgba(51, 51, 51, 0.2);
-            border-radius: 1rem;
-            overflow: hidden;
-            transition: all 0.1ms ease-in-out;
-            margin: 0;
-            width: 70%;
-            background: none;
+        .navigation {
+          padding-left: 0;
+          gap: 16rem;
+          margin-bottom: 1rem;
+          justify-content: center;
 
-            &:hover {
-              transform: scale(1.02);
-            }
+          li {
+            margin: 0 auto;
+            padding: 0;
 
-            .img-fluid {
-              display: none;
-            }
+            .button {
+              .icon {
+                width: 8rem;
+                height: 8rem;
 
-            .col-md-8 {
-              width: 100%;
-            }
-            .card-body {
-              position: relative;
-
-              .card-title {
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);
-                background-color: #b48821;
-                width: 100%;
-                text-align: center;
-                font-size: 2.2rem;
-                padding: 2rem;
-                color: white;
-              }
-
-              .card-text {
-                margin-top: 6rem;
-                font-size: 1.6rem;
-              }
-
-              .subscribe-btn-container {
-                display: flex;
-                justify-content: center;
-                .subscribe-btn {
-                  height: 3.5rem;
-                  width: 10rem;
-                  font-size: 1.6rem;
-                  font-weight: 400;
+                img {
+                  height: 5.5rem;
+                  width: 5.5rem;
                 }
               }
             }
           }
         }
       }
-      /*----- End of Service component media query----- */
+
+      .service-section {
+        padding: 2rem;
+
+        .card-container {
+          box-shadow: 0.5rem 0.5rem 1rem rgba(51, 51, 51, 0.2);
+          border-radius: 1rem;
+          overflow: hidden;
+          transition: all 0.1ms ease-in-out;
+          margin: 0;
+          width: 70%;
+          background: none;
+
+          &:hover {
+            transform: scale(1.02);
+          }
+
+          .img-fluid {
+            display: none;
+          }
+
+          .col-md-8 {
+            width: 100%;
+          }
+          .card-body {
+            position: relative;
+
+            .card-title {
+              position: absolute;
+              top: 0;
+              left: 0;
+              right: 0;
+              clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);
+              background-color: #b48821;
+              width: 100%;
+              text-align: center;
+              font-size: 2.2rem;
+              padding: 2rem;
+              color: white;
+            }
+
+            .card-text {
+              margin-top: 6rem;
+              font-size: 1.6rem;
+            }
+
+            .subscribe-btn-container {
+              display: flex;
+              justify-content: center;
+              .subscribe-btn {
+                height: 3.5rem;
+                width: 10rem;
+                font-size: 1.6rem;
+                font-weight: 400;
+              }
+            }
+          }
+        }
+      }
     }
+
+    /* Hero Component */
     .hero-container {
       .hero {
         .col1 {
@@ -991,6 +1017,23 @@
           }
         }
       }
+    }
+
+    /* Contact Componet */
+    .contact-container {
+      .contact-sub-container {
+        .form-container {
+          h2 {
+            font-size: 2.5rem;
+          }
+        }
+      }
+    }
+
+    /* footer */
+    footer {
+      padding-left: 2rem;
+      padding-right: 2rem;
     }
   }
 
