--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -63,7 +63,32 @@
           }
         }
       }
-
+      .cart-btn{
+        color:#b48821;
+        width:30px;
+        height: 50px;
+        &:hover {
+          color: black;
+        }
+        
+      }
+      .cart{
+        list-style: none;
+        position:relative;
+        .links span{
+          font-size: 10px;
+          background-color: rgb(11, 11, 11);
+          border-radius: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          color:white;
+          position:absolute;
+          top:0px;
+          left:20px;
+          padding: .5px 5px;
+        }
+      }
       .profile-btn {
         list-style: none;
         .links {
