--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -148,19 +148,19 @@
 /* ++++++++++ Start of Aboutme Component style sheet ++++++++++ */
 .about-container {
   @include section-padding-style;
-  
+
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  z-index: 1;
-  position: relative;
+
+  //z-index: 1;
+  // position: relative;
   .about-image {
     width: 400px;
     height: 600px;
     margin-left: 5rem;
   }
 
-  .rectangle1,
+  /* .rectangle1,
   .rectangle2 {
 
     position: absolute;
@@ -170,7 +170,7 @@
     height: 630px;
     transform: rotate(-13deg);
     z-index: -1;
-    /*     animation: rotateAnimation 60s infinite linear; */
+   
   }
   .rectangle1 {
     border: 15px solid #b68a2352;
@@ -179,18 +179,17 @@
   .rectangle2 {
     border: 15px solid #eaeae8;
     margin-top: -50px;
-    margin-left: -10px; /* Add some spacing between the rectangles */
-  }
+    margin-left: -10px; /* Add some spacing between the rectangles 
+  } */
 
   section {
     display: flex;
-    flex: 1;
-    gap: 2rem;
+    gap: 1rem;
     flex-direction: column;
     align-items: center;
     padding-top: 1rem;
-    max-width: 50vw;
-    margin-left: 10rem;
+    max-width: 100vw;
+    margin-left: 7rem;
     /*    margin-top: 2rem; */
 
     h2 {
@@ -201,7 +200,7 @@
       color: $text-color;
       font-family: "Roboto-Medium";
       font-size: 1.5rem;
-      max-width: 80%;
+      max-width: 100%;
     }
   }
 }
