--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -145,6 +145,8 @@
       }
     }
 
+    /* About me component */
+
     /* Footer component */
     footer {
       .scroll-to-top {
@@ -587,89 +589,80 @@ Other media query
 
     /*----- Start of Aboutme component media query----- */
     .about-container {
-      flex-wrap: wrap;
-      .rectangle1,
-      .rectangle2 {
+      display: flex;
+      flex-direction: column;
+      .about-image {
         width: 250px;
-        height: 430px;
-        left: 3rem;
+        height: 350px;
+        margin-left: 0;
+      }
+      /*  .rectangle1,
+      .rectangle2 {
+        width: 350px;
+        height: 530px;
       }
       .rectangle1 {
-        border: 5px solid #b68a2352;
-        margin-left: 30px; //Add some spacing between the rectangles
+        border: 10px solid #b68a2352;
       }
       .rectangle2 {
-        border: 5px solid #eaeae8;
-        margin-top: -15px;
-        margin-left: -5px; /* Add some spacing between the rectangles */
-      }
-      .about-image {
-        width: 300px;
-        height: 400px;
-        // border: 6px solid #b68a2352;
-      }
+        border: 10px solid #eaeae8;
+      } */
       section {
-        gap: 0;
-        max-width: 100vw;
-        text-align: center;
+        margin: 1rem;
+       width: 100%;
 
         h2 {
+          margin-top: 0.5rem;
           font-size: 1.5rem;
-          margin-bottom: 0;
-          margin-top: 2rem;
-          padding: 1rem;
         }
         p {
+      
+
           font-size: 1rem;
-          width: 100vw;
-          margin-bottom: 1rem;
         }
       }
-      /*----- End of Aboutme component media query----- */
-
-      /*----- Start of Feedback component media query----- */
-      .feedback-container {
-      }
-      .contact-container {
-        width: 99%;
-
-        .contact-sub-container {
-          .form-container {
-            width: 100%;
-
-            h2 {
-              font-size: 2rem;
-            }
-            h3 {
-              font-size: 1.5rem;
-            }
-          }
-          .contact-img {
-            display: none;
-          }
-        }
-      }
-      /*----- End of Feedback component media query----- */
-
-      /*----- Start of Demo component media query----- */
-      .demo-container {
-      }
-      /*----- End of Demo component media query----- */
     }
+    /*----- End of Aboutme component media query----- */
+
+    /*----- Start of Feedback component media query----- */
+    .feedback-container {
+    }
+    .contact-container {
+      width: 99%;
+
+      .contact-sub-container {
+        .form-container {
+          width: 100%;
+
+          h2 {
+            font-size: 2rem;
+          }
+          h3 {
+            font-size: 1.5rem;
+          }
+        }
+        .contact-img {
+          display: none;
+        }
+      }
+    }
+    /*----- End of Feedback component media query----- */
+
+    /*----- Start of Demo component media query----- */
+    .demo-container {
+    }
+    /*----- End of Demo component media query----- */
   }
+}
 
- }
-
-
-
- /* ++++++++++ Media Query for Tablet screen with min 600px and max 1023px  ++++++++++ */
+/* ++++++++++ Media Query for Tablet screen with min 600px and max 1023px  ++++++++++ */
 
 @media (min-width: $tablet-screen-min) and (max-width: $tablet-screen-max) {
-    .app {
-      /*----- Start of Navbar component media query----- */
-      .navbar-container {
-      }
-      /*----- End of Navbar component media query----- */
+  .app {
+    /*----- Start of Navbar component media query----- */
+    .navbar-container {
+    }
+    /*----- End of Navbar component media query----- */
 
     /*----- Start of Hero component media query----- */
     .hero-container {
@@ -685,7 +678,7 @@ Other media query
         height: 450px;
         margin-left: 0;
       }
-      .rectangle1,
+      /*  .rectangle1,
       .rectangle2 {
         width: 350px;
         height: 530px;
@@ -695,17 +688,17 @@ Other media query
       }
       .rectangle2 {
         border: 10px solid #eaeae8;
-      }
+      } */
       section {
         text-align: center;
-        max-width: 100vw;
-        gap: 0;
+        margin: 1rem;
+
         h2 {
-          margin-top: 2rem;
+          margin-top: 0.5rem;
           font-size: 2.5rem;
         }
         p {
-          max-width: 80vw;
+          max-width: 80%;
         }
       }
     }
@@ -823,7 +816,6 @@ Other media query
       /*----- Start of Footer component media query----- */
     }
   }
-
 }
 /*----------- Hero Section ------------------*/
 
@@ -975,10 +967,9 @@ Other media query
     }
   }
 
-
   /* ++++++++++ Media Query for Desktop screen with min width of 1024px ++++++++++ */
 
- @media (min-width: $desktop) {
+  @media (min-width: $desktop) {
     .app {
       /*----- Start of Navbar component media query----- */
       .navbar-container {
@@ -1086,17 +1077,7 @@ Other media query
       /*----- End of Hero component media query----- */
 
       /*----- Start of Aboutme component media query----- */
-      .about-container {
 
-        about-image {
-          width: 400px;
-          height: 600px;
-
-        }
-
-      
-       
-      }
       /*----- End of Aboutme component media query----- */
 
       /*----- Start of Service component media query----- */
