--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -1,6 +1,12 @@
 /* +++ Media Query for max width of 360px +++ */
 @media (max-width: #{$small}) {
   .app {
+    /* user componenet */
+    .user-profile {
+      width: 99%;
+      margin: 0;
+      padding: 0;
+    }
     /* Navbar Component */
     .navbar-container {
       .hamburger {
@@ -319,389 +325,6 @@
         display: flex;
         flex-direction: column;
         /* Hero Component */
-        .hero-container {
-          width: 99%;
-          display: flex;
-          justify-content: center;
-
-          .hero {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 1rem;
-            flex-direction: column;
-            background: none;
-            .col1 {
-              width: 100%;
-
-              margin-left: 0;
-              margin-top: 0;
-              margin-bottom: 0;
-              order: 1;
-              h1 {
-                text-align: center;
-                font-size: 8rem;
-              }
-              h2 {
-                text-align: center;
-
-                font-size: 3rem;
-              }
-            }
-            .col2 {
-              position: relative;
-              width: 100%;
-              order: 2;
-              margin-left: 0;
-              .ball {
-                width: 18rem;
-                height: 18rem;
-                margin-left: 0;
-                right: 10rem;
-                transform: translateX(-5px);
-              }
-              img {
-                width: 14rem;
-                height: 15rem;
-                margin-top: 1rem;
-              }
-            }
-          }
-        }
-        /* Services componenet */
-        .service-container {
-          width: 99%;
-          margin-top: -7rem;
-
-          .service-wrapper {
-            padding: 0;
-            .header-container {
-              h2 {
-                font-size: 1.7rem;
-              }
-            }
-
-            .tab-container {
-              margin-left: 0;
-              margin-bottom: 1rem;
-              width: 96%;
-              padding-top: 3rem;
-              padding-bottom: 3rem;
-              padding-left: 0;
-              padding-right: 0;
-
-              .navigation {
-                padding-left: 0;
-                gap: 6rem;
-                justify-content: center;
-                li {
-                  margin: 0 auto;
-
-                  padding: 0;
-
-                  .button {
-                    .icon {
-                      width: 4rem;
-                      height: 4rem;
-
-                      img {
-                        height: 2.5rem;
-                        width: 2.5rem;
-                      }
-                    }
-                  }
-                }
-              }
-            }
-
-            .service-section {
-              width: 70%;
-
-              .card-content-container {
-                .cards-container {
-                  gap: 1rem;
-                  padding: 0;
-                  padding-bottom: 1rem;
-                  display: flex;
-                  flex-direction: column;
-
-                  .card-basic,
-                  .card-premium,
-                  .card-standard {
-                    width: 100%;
-
-                    /* Cards header */
-                    .card-header {
-                      padding: 0.5rem;
-                      height: 3rem;
-
-                      h3 {
-                        font-size: 1.3rem;
-                      }
-                    }
-
-                    /* Card body */
-                    .card-body {
-                      p {
-                        h4 {
-                          font-size: 1rem;
-                          padding: 0rem;
-                        }
-                      }
-
-                      /* Cards elements*/
-                      .card-element-container {
-                        font-size: 0.8rem;
-                      }
-
-                      /* buttons */
-                      .btn {
-                        font-size: 0.7rem;
-                        padding: 0.5rem 0.7rem;
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-
-        /* About Componet */
-        .about-container {
-          width: 99%;
-          flex-wrap: wrap;
-          .rectangle1,
-          .rectangle2 {
-            display: none;
-          }
-
-          .about-image {
-            margin: 0;
-            width: 300px;
-            height: 400px;
-            // border: 6px solid #b68a2352;
-          }
-          section {
-            margin: 0;
-            gap: 0;
-            max-width: 100vw;
-            text-align: center;
-
-            p {
-              font-size: 1rem;
-              width: 100vw;
-              margin-bottom: 1rem;
-            }
-          }
-        }
-        /* Contact component */
-        .contact-container {
-          margin-top: -5rem;
-          width: 99%;
-
-          .contact-sub-container {
-            .form-container {
-              width: 100%;
-
-              h2 {
-                display: none;
-              }
-              h3 {
-                margin-top: 0;
-                font-size: 2rem;
-                color: #b48821;
-                text-align: center;
-              }
-
-              /* form name */
-              .col-6 {
-                width: 100%;
-                margin-bottom: 1rem;
-              }
-
-              /* form subject */
-              .col {
-                margin-top: -3rem;
-              }
-
-              /* form message */
-              .message {
-                height: 8rem;
-              }
-
-              /* contact button */
-              .submit-btn {
-                font-size: 1rem;
-                height: 2.5rem;
-                font-weight: 500;
-              }
-            }
-
-            .contact-img {
-              display: none;
-            }
-          }
-        }
-
-        /* start of demo component */
-        .demo {
-          font-size: 0.8rem;
-
-          .demo-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            $margin-size: 1rem;
-            gap: 0.2rem;
-
-            .demo-session-description {
-              width: 13rem;
-
-              p {
-                display: none;
-              }
-
-              ul {
-                margin: 0.5rem;
-                li {
-                  margin: 0.1rem;
-                }
-              }
-
-              h6 {
-                font-size: 1.3rem;
-              }
-
-              button {
-                margin: 0.5rem;
-                font-size: 0.8rem;
-                height: 2rem;
-                font-weight: 500;
-                width: 6rem;
-              }
-            }
-          }
-        }
-        /* end of demo component  */
-
-        /* Footer component */
-        footer {
-          .scroll-to-top {
-            width: 35px;
-            height: 35px;
-            font-size: 18px;
-            bottom: 20px;
-            right: 20px;
-          }
-          .footer-container {
-            display: flex;
-            flex-direction: column;
-
-            .logo-container {
-              padding-top: 1.5rem;
-              display: flex;
-              justify-content: center;
-              .logo {
-                font-size: 2.5rem;
-              }
-            }
-
-            /* About container */
-            .about-me {
-              h5 {
-                margin-top: -1.5rem;
-                text-align: center;
-                padding-bottom: 1rem;
-                font-size: 1.5rem;
-              }
-              p {
-                font-size: 0.9rem;
-                padding-left: 2.5rem;
-                padding-right: 2.5rem;
-              }
-              .icons {
-                ul {
-                  font-size: 2rem;
-                  gap: 1rem;
-                  justify-content: center;
-                  padding-left: 0;
-                }
-              }
-            }
-
-            /* .links */
-            .links {
-              display: flex;
-              justify-content: center;
-
-              ul {
-                h5 {
-                  text-align: center;
-                  font-size: 1.5rem;
-                }
-                li {
-                  a {
-                    font-size: 1rem;
-                  }
-                }
-              }
-            }
-          }
-
-          .copyright {
-            font-size: 1rem;
-          }
-        }
-        .logo-container {
-          padding-top: 1.5rem;
-          display: flex;
-          justify-content: center;
-          .logo {
-            font-size: 2.5rem;
-          }
-        }
-
-        /* About container */
-        .about-me {
-          h5 {
-            margin-top: -1.5rem;
-            text-align: center;
-            padding-bottom: 1rem;
-            font-size: 1.5rem;
-          }
-          p {
-            font-size: 0.9rem;
-            padding-left: 2.5rem;
-            padding-right: 2.5rem;
-          }
-          .icons {
-            ul {
-              font-size: 2rem;
-              gap: 1rem;
-              justify-content: center;
-              padding-left: 0;
-            }
-          }
-        }
-
-        /* .links */
-        .links {
-          display: flex;
-          justify-content: center;
-
-          ul {
-            h5 {
-              text-align: center;
-              font-size: 1.5rem;
-            }
-            li {
-              a {
-                font-size: 1rem;
-              }
-            }
-          }
-        }
       }
 
       .copyright {
