--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -6,6 +6,22 @@
       width: 99%;
       margin: 0;
       padding: 0;
+
+      h1 {
+        font-size: 1.4rem;
+        text-align: center;
+        padding: 1rem;
+      }
+      p {
+        font-size: 0.9rem;
+        text-align: center;
+      }
+      .user-btn {
+        margin-left: 1rem;
+        margin-bottom: 1rem;
+        font-size: 1rem;
+        padding: 0.5rem;
+      }
     }
     /* Navbar Component */
     .navbar-container {
